mesh-with-db/k8s/mesh/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microservices-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - quarkus-insurance-app.apps.qyt1tahi.eastus.aroapp.io
        - quarkus-person-app.apps.qyt1tahi.eastus.aroapp.io
