mesh-with-db/k8s/mesh/auth.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-v1-only
spec:
  selector:
    matchLabels:
      app: quarkus-person-app
      app.kubernetes.io/version: v2
  action: ALLOW
  rules:
    - to:
      - operation:
          methods:
            - POST
